; ModuleID = '/home/carl/AnghaBench/RetroArch/deps/mbedtls/extr_sha256.c_mbedtls_sha256_free.c'
source_filename = "/home/carl/AnghaBench/RetroArch/deps/mbedtls/extr_sha256.c_mbedtls_sha256_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mbedtls_sha256_free(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = load i32*, i32** %2, align 8
  %4 = icmp eq i32* %3, null
  br i1 %4, label %5, label %6

5:                                                ; preds = %1
  br label %9

6:                                                ; preds = %1
  %7 = load i32*, i32** %2, align 8
  %8 = call i32 @mbedtls_zeroize(i32* %7, i32 4)
  br label %9

9:                                                ; preds = %6, %5
  ret void
}

declare dso_local i32 @mbedtls_zeroize(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
